syntax = "proto3";

option go_package = "github.com/bqxtt/book_online/book/pkg/sdk/bookpb";

package sdk;

message Book {
  int64  id = 1;
  string ISBN = 2;
  string book_name = 3;
  string publisher = 4;
  string category = 5;
  string author = 6;
  string img_url = 7;
  string description = 8;
}